Fix close button z-index

--- a/wikilegis/static/styles/templates/amendments/_index.scss
+++ b/wikilegis/static/styles/templates/amendments/_index.scss
@@ -36,7 +36,7 @@
   position: absolute;
   top: .5em;
   transition: color .2s $swift-out;
-  z-index: 1;
+  z-index: 2;
 
   @include breakpoint($small-only) {
     font-size: 1.5em;
